GNOME Bugzilla – Bug 702469
Settings search has inconsistent behavior
Last modified: 2013-06-19 10:11:34 UTC
User can notice that searching for something in settings, and then erasing the search criteria, entering on the search field will open random settings tabs. Steps : 1. Boot System 2. Open system settings 3. On the search bar (top right) click on it to highlight it 4. Press Enter, observe nothing happens 5. Search for a string (my example is string "re") 6. Erase the string, observe search tab is still highlighted and that nothing is selected from the settings sections 7. Press ENTER 8. Observe it opens BACKGROUNDS and sometimes DETAILS Expected outcome Nothing opens since nothing is highlighted and on first start pressing enter does not open anything Actual outcome System will open random section (mostly backgrounds) from settings section Note : reproduced on Fedora 19 Beta
I can't reproduce this with gnome-control-center 3.8.2
Search is for bugs in the search panel, not for the gnome-control-center shell's search
I'm talking about the search panel in the gnome settings window
There's no top-right search bar in the search panel. You're talking about search in the control-center's shell overview.
I'm talking about the search field you can observe when opening General Settings (gnome-control-center)
Created attachment 247137 [details] [review] shell: ensure a search is in progress before activating a panel
Review of attachment 247137 [details] [review]: There's changes to egg-list-box and libgd in your patch. ::: shell/cc-window.c @@ +630,3 @@ CcWindowPrivate *priv = self->priv; + if (event->keyval == GDK_KEY_Return && g_strcmp0 (priv->filter_string, "")) != 0
> 6. Erase the string, observe search tab is still highlighted and that nothing > is selected from the settings sections I still cannot reproduce the problem. Would be good if you could tell me how.
I think the main issue is that after entering a search term with some results then deleting the search, pressing enter would launch a panel. I've made the suggested changes to the patch and pushed to both master and gnome-3-8 branches.