shell: ensure a search is in progress before activating a panel

https://bugzilla.gnome.org/show_bug.cgi?id=702469